[gd_scene load_steps=8 format=1]

[ext_resource path="res://ui/register/register_ui.gd" type="Script" id=1]
[ext_resource path="res://fonts/KenVector Future.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]

font/size = 16
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]

font/size = 16
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]

font/size = 16
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]

font/size = 16
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]

font/size = 16
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 2 )

[node name="main" type="Control"]

process/pause_mode = 2
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
script/script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 27.0
margin/top = 42.0
margin/right = 597.0
margin/bottom = 351.0

[node name="user_label" type="Label" parent="Panel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 184.0
margin/top = 91.0
margin/right = 267.0
margin/bottom = 109.0
custom_fonts/font = SubResource( 1 )
text = "usuario"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="pass_label" type="Label" parent="Panel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 138.0
margin/top = 127.0
margin/right = 268.0
margin/bottom = 145.0
custom_fonts/font = SubResource( 2 )
text = "contraseña"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="repeat_pass_label" type="Label" parent="Panel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 51.0
margin/top = 172.0
margin/right = 268.0
margin/bottom = 190.0
custom_fonts/font = SubResource( 3 )
text = "repetir contraseña"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="wrong_passw" type="Label" parent="Panel"]

visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 181.0
margin/top = 216.0
margin/right = 387.0
margin/bottom = 230.0
text = "¡Las contraseñas no son iguales!"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="user_exists" type="Label" parent="Panel"]

visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 212.0
margin/top = 235.0
margin/right = 358.0
margin/bottom = 249.0
text = "¡El usuario ya existe!"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="register_btn" type="Button" parent="Panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 222.0
margin/top = 260.0
margin/right = 369.0
margin/bottom = 284.0
custom_fonts/font = SubResource( 4 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Registrarse"
flat = false

[node name="back_btn" type="Button" parent="Panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 29.0
margin/top = 23.0
margin/right = 81.0
margin/bottom = 43.0
custom_fonts/font = SubResource( 5 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Volver"
flat = false

[node name="user_txt" type="LineEdit" parent="Panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 278.0
margin/top = 87.0
margin/right = 485.0
margin/bottom = 114.0
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="pass_txt" type="LineEdit" parent="Panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 278.0
margin/top = 125.0
margin/right = 485.0
margin/bottom = 150.0
placeholder/alpha = 0.6
secret = true
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="repeat_pass_txt" type="LineEdit" parent="Panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 279.0
margin/top = 169.0
margin/right = 485.0
margin/bottom = 199.0
placeholder/alpha = 0.6
secret = true
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65


